fix image alignment issues and add default margin 15px to p tags

--- a/styles/sass/partials/_ueditor-inserts.scss
+++ b/styles/sass/partials/_ueditor-inserts.scss
@@ -292,3 +292,6 @@ div.uinsert-selector a:hover {
 .ueditor-insert.upfront-inserted_image-basic-wrapper, .ueditor-insert.upfront-inserted_image-basic-wrapper:hover{
   margin:0 -15px;
 }
+.upfront-inserted_image-basic-wrapper .ueditor-insert{
+	margin-top:-15px;
+}
